syntax = "proto3";

package datacloud.kafka.v1;

import "datacloud/v1/paging.proto";
import "datacloud/kafka/v1/version.proto";

option go_package = "a.yandex-team.ru/cloud/mdb/datacloud/private_api/datacloud/kafka/v1;kafkav1";
option java_package = "doublecloud.priv.kafka.v1";
option java_outer_classname = "DKVS";

service VersionService {
  // Returns list of available Kafka versions.
  rpc List (ListVersionsRequest) returns (ListVersionsResponse);
}

message ListVersionsRequest {
    // Paging information of the request
    datacloud.v1.Paging paging = 1;
}

message ListVersionsResponse {
    // Requested list of available versions.
    repeated Version versions = 1;

    // Pagination information of the response
    datacloud.v1.NextPage next_page = 2;
}
